# gnss-denied-nav

./: .env.example  .gitignore  README.md  drone_satellite_pipeline_spec.docx  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml  lighthouse_benchmarking.yaml  mun_frl_m600.yaml
src/gnss_denied_nav/: config.py
src/gnss_denied_nav/cli/: preprocess.py
src/gnss_denied_nav/filters/: ekf.py  particle.py
src/gnss_denied_nav/inspection/: __init__.py  sampler.py  stage_dumper.py
src/gnss_denied_nav/interfaces/: base.py  contracts.py  factory.py
src/gnss_denied_nav/io/: flat_loader.py
src/gnss_denied_nav/io/converters/: pos_parser.py  rosbag.py
src/gnss_denied_nav/modules/encoder/: dinov2.py  onnx_encoder.py
src/gnss_denied_nav/modules/pose/: ins_radalt.py
src/gnss_denied_nav/modules/retrieval/: faiss_flat.py  faiss_hnsw.py  matrix_profile.py
src/gnss_denied_nav/modules/sampling/: uniform.py
src/gnss_denied_nav/modules/tiles/: google_maps.py  mbtiles.py
src/gnss_denied_nav/modules/transform/: homography.py
src/gnss_denied_nav/preprocessing/: __init__.py  crop_pad.py  domain_norm.py  gsd_match.py  north_align.py  pipeline.py  undistort.py  warp_nadir.py
src/gnss_denied_nav/tools/: extract_bag.py  inspect_pipeline.py  verify_dataset.py
tests/fixtures/undistort/: pinhole_identity.yaml  pinhole_mild_barrel.yaml  pinhole_moderate_barrel.yaml  pinhole_pincushion.yaml
tests/helpers/: synthetic.py
tests/unit/: test_contracts.py  test_crop_pad.py  test_domain_norm.py  test_factory.py  test_gsd_match.py  test_inspection.py  test_inspection_config.py  test_north_align.py  test_pipeline.py  test_rosbag_converter.py  test_undistort.py  test_warp_nadir.py
