[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gnss-denied-nav"
version = "0.1.0"
description = "GNSS-denied UAV navigation via satellite image matching"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # Core numerics
    "numpy>=1.26",
    "scipy>=1.12",

    # Image processing
    "opencv-python-headless>=4.9",
    "Pillow>=10.0",

    # Geospatial
    "rasterio>=1.3",
    "pyproj>=3.6",

    # ML / embedding
    "onnxruntime>=1.17",
    "torch>=2.2",
    "torchvision>=0.17",

    # Retrieval
    "faiss-cpu>=1.8",

    # ROS bag parsing (no ROS required)
    "rosbags>=0.9",
    "pandas>=2.0",
    "pyarrow>=14.0",

    # Config
    "pyyaml>=6.0",
    "python-dotenv>=1.0",

    # Tile / HTTP
    "requests>=2.31",
    "mercantile>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
viz = [
    "matplotlib>=3.8",
    "folium>=0.16",
]

[project.scripts]
extract-bag      = "gnss_denied_nav.tools.extract_bag:main"
run-pipeline     = "gnss_denied_nav.pipeline:main"
benchmark        = "gnss_denied_nav.tools.benchmark:main"
verify-dataset   = "gnss_denied_nav.tools.verify_dataset:main"
inspect-pipeline = "gnss_denied_nav.tools.inspect_pipeline:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gnss_denied_nav"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
# matplotlib/tkinter non hanno stubs completi — disabilitiamo solo untyped-call
module = [
    "gnss_denied_nav.tools.verify_dataset",
    "gnss_denied_nav.tools.inspect_pipeline",
]
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=gnss_denied_nav --cov-report=term-missing -v"
